Arena

adjust salvage event "Ship Roulette" -
    add the option to connect the output of a colony to the station
    always require Metal, ship components and machinery
    Let player choose between runtime of 1 month, 2, 3 or 4 then deliver the output and the station salvage to the colony
    add an intel entry showing the progress

-----------------------o-----------------------
3.2.d
General
Added - Planet Jump listener, interface to notify when a planet has finished jumping via rift generator (for modders)

Automated Shipyards
Adjusted - new interaction image (the old one was kinda trash)

Salvage Interactions
Adjusted - Rows for ship picking on Ship Sacrifice event increased from 5 to 8
Fixed - "Exploding Room" special can now pick (certain) Industrial Evolution items again

Minefields
Added - Tooltip showing controlling entity
Fixed - Base damage halved
Fixed - Damage now properly scales with fleet size (hit chance is still fleet size and speed)

Items
Adjusted - Simulation Engine - Added tooltip info about scaling effect
Adjusted - Neural Compounds - Clarified tooltip if senate with item is in range or not
Fixed - Planet "in Range" tooltip no longer incorrectly states 12 LY range restriction for hypertransmitter, it's infinite as intended
Fixed - Crash when tech locator tries to point to a system that has no hyperspace anchor (????)

Commerce
Fixed - No longer resets build times on load/save

Restoration Docks
Fixed - Broken Tooltips

Requisitions center
Fixed - Broken Tooltips

Engineering Hub
"Fixed" - Crash when Variant is null (I don't know why it does that and the fix is a bandaid.)

World Wonders
Fixed - Dark Palace "Ressource" typo (literally unplayable)

Ancient Laboratory
Added - Now supports switching the bonus commodity when a beta core is installed (via story point dialogue for 0 SP)

3.2.c
Privateer Base
Added - Small interaction with Substance.Abuse
Added - Setting to auto-deliver to gathering point (reverting the change below)