@@ -50,7 +50,8 @@ Allows you to transfer cargo between colonies via recurrent shipping contracts."
 IndEvo_pirateHaven,Privateer Base,90,90,,10,,,"industry, tactical_bombardment",,graphics/industry/pirateHaven.png,indevo.industries.privateer.industry.PrivateerBase,"The Privateer Base allows the shady part of your populace to live out their chosen way of life in a semi-legal way, which can net you a tidy profit on what would otherwise be a nuisance. It will also cause a pirate subpopulation to appear on your planet.
 
 This will stage raids on hostile star systems, and bring back spoils of war depending on the industrialisation of the raided planets. Output decays after some time if no new material is ""liberated"".",500
-IndEvo_SwitchableRefining,Specialized Refining,30,30,,3,,,"refining, industry, industrial",,graphics/icons/industry/refining.png,indevo.industries.changeling.industry.SwitchableRefining,"A specialized refining plants offering increased output over the default version by switching between the desired commodity output, sacrificing utility over yield.",500
+IndEvo_SwitchableRefining,Specialized Refining,15,30,,3,refining,,"refining, industry, industrial",,graphics/icons/industry/refining.png,indevo.industries.changeling.industry.refining.SwitchableRefining,"A specialized refining plants offering increased output over the default version by switching between the desired commodity output, sacrificing utility over yield.",500
+IndEvo_SwitchableMining,Specialized Mining,15,30,,2,mining,,"mining, industry, industrial",,graphics/icons/industry/mining.png,indevo.industries.changeling.industry.mining.SwitchableMining,"Dedicated extraction techniques offer increased output over the default version by switching between the desired commodity output, sacrificing utility over yield.",300
 ,,,,,,,,,,,,,
 #Artillery,,,,,,,,,,,,,
 IndEvo_Artillery_base,Orbital Artillery,,,,,,,"artillery, parent_item, important, structure",artillery,graphics/icons/industry/station_category.png,indevo.industries.artillery.industry.ArtilleryStation,"The remains of an ancient strategic artillery station hang listless over $market. Repairing it will provide you with a defensive weapons system of unrivalled effectiveness.
