@@ -250,6 +250,10 @@
           "IndEvo_eye_3": "graphics/fx/IndEvo_watchtower_3.png",
       },
       "IndEvo": {
+          "ore_mining":"graphics/industry/ore_mining.png",
+          "rare_mining":"graphics/industry/rare_ore_mining.png",
+          "volatile_mining":"graphics/industry/rare_ore_refining.png",
+          "organics_mining":"graphics/industry/rare_ore_refining.png",
           "rare_ore_refining":"graphics/industry/rare_ore_refining.png",
           "ore_refining":"graphics/industry/ore_refining.png",
           "kadur_megachurch":"graphics/industry/flavour/megachurch_kadur.png",
