@@ -24,10 +24,10 @@ IndEvo_base_refining,CUSTOM,"A specialized version of refining that can be recon
 IndEvo_ore_refining,CUSTOM,"Specialized smelting infrastructure to extract valuable metal from ore. Does not work with transplutonics or other rare ores, but reaches a higher extraction efficiency than normal smelting plants. Teleoperated robotics are used to handle the most dangerous tasks, usually.",metals,,
 IndEvo_rare_refining,CUSTOM,"Specialized smelting infrastructure to extract rare transplutonics from the respective ore. Normal ore is not smelted here as the furnaces are specialized towards exotic ore applications with high efficiency. Teleoperated robotics are used to handle the most dangerous tasks, usually.",transplutonics,,
 IndEvo_base_mining,CUSTOM,"Metal and metalloid ores, organics, and volatile compounds all require heavy equipment, special infrastructure, and a skilled workforce to extract. The harsh work attracts a certain type, and an administration that's not willing to look the other way now and again may find itself running short of willing personnel.","ore, transplutonic ore and volatiles",,
-IndEvo_volatile_mining,CUSTOM,,volatiles,,
-IndEvo_ore_mining,CUSTOM,,ore,,
-IndEvo_rare_ore_mining,CUSTOM,,transplutonic ore,,
-IndEvo_organics_mining,CUSTOM,,organics,,
+IndEvo_ore_mining,CUSTOM,IndEvo_ore_mining,volatiles,,
+IndEvo_rare_mining,CUSTOM,IndEvo_rare_mining,ore,,
+IndEvo_volatile_mining,CUSTOM,IndEvo_volatile_mining,transplutonic ore,,
+IndEvo_organics_mining,CUSTOM,IndEvo_organics_mining,organics,,
 ,,,,,
 IndEvo_parts,RESOURCE,"Old starship parts which can no longer be properly produced by the decaying Sector infrastructure. Their only reliable source is the deconstruction of existing ships. A shortage of these will not prohibit the construction of new ships by much, but it will seriously affect their quality.",,,
 IndEvo_rare_parts,RESOURCE,"Ancient or highly advanced technology which can no longer be manufactured in the Persean Sector. These components are essential to building new, pristine spaceships - they do not get traded on the open market, and are the reason Salvage Yards are usually viciously guarded.",,,
